editing bookmark parser